--- a/frontend/src/assets/stylesheets/index.scss
+++ b/frontend/src/assets/stylesheets/index.scss
@@ -1,4 +1,5 @@
 /* reset file */
 @import './reset.scss';
 @import './components/profile_pages.scss' ;
-@import './components/navbar.scss'
+@import './components/navbar.scss';
+@import './splash.scss';
