create fetch all users action

--- a/frontend/src/assets/stylesheets/components/profile_pages.scss
+++ b/frontend/src/assets/stylesheets/components/profile_pages.scss
@@ -1,4 +1,11 @@
 .profile-page-container{
     height: 100%;
-    background-color: black;
+    position: absolute;
+ 
+}
+
+.profile-info-container{
+    display: flex;
+    justify-content: space-between;
+    // border: 1px solid black;
 }
