--- a/frontend/src/assets/stylesheets/components/profile_pages.scss
+++ b/frontend/src/assets/stylesheets/components/profile_pages.scss
@@ -1,10 +1,12 @@
 .profile-page-container{
-    height: 100%;
-    position: absolute;
- 
+    // height: 100%;
+    position: relative;
+    width: 100%;
 }
 
 .profile-info-container{
+    // width: 100%;
+    padding-top: 50px;
     display: flex;
     justify-content: space-between;
     // border: 1px solid black;
