--- a/frontend/src/assets/stylesheets/components/profile_pages.scss
+++ b/frontend/src/assets/stylesheets/components/profile_pages.scss
@@ -6,8 +6,38 @@
 
 .profile-info-container{
     // width: 100%;
-    // padding-top: 50px;
+    height: 100%;
+    padding-top: 50px;
     display: flex;
     justify-content: space-between;
     // border: 1px solid black;
+}
+
+.profile-picture{
+    display: flex;
+    flex-direction: column;
+    border: 1px solid blue;
+    width: 25%;
+    text-align: center;
+}
+
+.profile-name{
+    text-align: center;
+    font-size: 36px;
+    font-weight: bold;
+}
+
+.profile-posts{
+    width: 40%;
+    border: 1px solid red;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-align: center;
+}
+
+.friends-bar{
+    width: 20%;
+    border: 1px solid yellow;
 }
