working on live chat

--- a/frontend/src/assets/stylesheets/index.scss
+++ b/frontend/src/assets/stylesheets/index.scss
@@ -1,4 +1,7 @@
 /* reset file */
 @import './reset.scss';
 @import './components/profile_pages.scss' ;
-@import './components/navbar.scss'
+@import './components/navbar.scss';
+@import './components/messenger.scss';
+@import './components/conversation.scss';
+@import './components/message.scss';
