--- a/frontend/src/assets/stylesheets/splash.scss
+++ b/frontend/src/assets/stylesheets/splash.scss
@@ -11,7 +11,7 @@ html {
 
 body {
     height: 100%;
-    background: linear-gradient(#eccb0d, #fdaa2d);
+    background-color: rgb(136, 136, 136);
     font-family: $main-font;
 }
 
@@ -21,7 +21,7 @@ body {
     color:rgb(255, 241, 241);
     font-size: 50px;
     position: absolute;
-    top: 350px;
+    top: 300px;
     left: 850px;
     width: 800px;
     overflow-wrap: break-word;
@@ -29,17 +29,23 @@ body {
 
 .circle {
     position: absolute;
-    left: 200px;
-    top: 70px;
-    height: 600px;
-    width: 600px;
+    left: -200px;
+    top: 200px;
+    // left: 200px;
+    // top: 70px;
+    // height: 600px;
+    // width: 600px;
+    height: 1000px;
+    width: 1000px;
     border-radius: 50%;
     background-image: url('../images/circle1.png');
-    background-size: 600px;
+    // background-size: 600px;
+    background-size: 1000px;
     animation-name: rotate;
     animation-duration: 80s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
+    overflow: hidden;
 }
 
 @keyframes rotate{
@@ -48,16 +54,18 @@ body {
 }
 
 .splash-content {
-    height: 760px;
+    height: 750px;
     position: relative;
+    overflow: hidden;
 }
 
 .main-content {
     height: max-content;
+    background: linear-gradient(#eccb0d, #fdaa2d);
 }
 
 footer {
-    height: 100px;
-    background-color: rgb(255, 185, 56);
+    height: 110px;
+    background-color: rgb(136, 136, 136);
     width: 100%;
 }
