Add demo submit

--- a/frontend/src/assets/stylesheets/components/navbar.scss
+++ b/frontend/src/assets/stylesheets/components/navbar.scss
@@ -110,7 +110,7 @@
   outline: none;
 }
 
-.auth-form .login-email::placeholder, .login-password::placeholder{
+.auth-form .login-email::placeholder, .login-password::placeholder, .login-handle::placeholder{
   color: rgb(163, 163, 163);
   font-style: italic;
   font-weight: 300;
