--- a/frontend/src/assets/stylesheets/components/message.scss
+++ b/frontend/src/assets/stylesheets/components/message.scss
@@ -6,6 +6,7 @@
 .messageTop{
     display: flex;
     margin-top:20px;
+    align-items: center;
 }
 
 .messageImg{
@@ -22,6 +23,7 @@
     background-color: rgb(45, 72, 221);
     color:white;
     max-width: 300px;
+    word-wrap: break-word;
 }
 
 .messageBottom{
