Show posts index on feed and user profile

--- a/frontend/src/assets/stylesheets/index.scss
+++ b/frontend/src/assets/stylesheets/index.scss
@@ -6,3 +6,4 @@
 @import './components/conversation.scss';
 @import './components/message.scss';
 @import './splash.scss';
+@import './components/feed.scss';
