--- a/frontend/src/assets/stylesheets/splash.scss
+++ b/frontend/src/assets/stylesheets/splash.scss
@@ -61,7 +61,7 @@ body {
 }
 
 .main-content {
-    height: max-content;
+    min-height: 750px;
     background: linear-gradient(#eccb0d, #fdaa2d);
 }
 
