Fix submitting and closing post form

--- a/frontend/src/assets/stylesheets/index.scss
+++ b/frontend/src/assets/stylesheets/index.scss
@@ -7,3 +7,4 @@
 @import './components/message.scss';
 @import './splash.scss';
 @import './components/feed.scss';
+@import './components/post.scss';
