--- a/frontend/src/assets/stylesheets/splash.scss
+++ b/frontend/src/assets/stylesheets/splash.scss
@@ -16,6 +16,10 @@ body {
     font-family: $main-font;
 }
 
+.hidden {
+    display: none;
+}
+
 .tagline {
     font-family: $main-font;
     font-weight: 300;
