--- a/frontend/src/assets/stylesheets/components/friend.scss
+++ b/frontend/src/assets/stylesheets/components/friend.scss
@@ -7,23 +7,42 @@
 
 .friends-bar{
     width: 20%;
-    border: 1px solid yellow;
+    // border: 1px solid yellow;
+
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
 }
 
 .friend-list-item{
-    background-color: white;
+    background-image: linear-gradient(to right, red , lightblue);
     display: flex;
     flex-direction: column;
     border-radius: 10px;
     padding-top: 10%;
     // padding-bottom: 10%;
     height: 10%;
+    justify-content: center;
+    align-content: center;
 
 }
 
-.friend-link-profile{
+.friend-page-button{
     color: blue;
+    background-color: lightpink;
+    text-decoration: none;
+    // width: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    // font-family: $main-font;
+
+}
+
+.friend-page-messenger{
+    color: red;
+    background-color: lightpink;
+    text-decoration: none;
+    // width: 50%;
+    display: flex;
+    justify-content: space-evenly;
 }
