--- a/frontend/src/assets/stylesheets/components/feed.scss
+++ b/frontend/src/assets/stylesheets/components/feed.scss
@@ -1,8 +1,8 @@
 @import '../splash.scss';
 
 .main-feed {
-    height: 830px;
-    background-color: rgb(255, 252, 225);
+    height: max-content;
+    background-color: rgb(253, 234, 170);
     width: 100%;
     display: flex;
 }
@@ -10,21 +10,26 @@
 .aside-right, .aside-left {
     width: 300px;
     background-color: green;
-    height: 830px;
 }
 
 .post-index {
     width: 80%;
-    height: 830px;
-    background-color: rgb(142, 142, 253);
+    height: max-content;
+    background-color: rgb(253, 255, 228);
     margin-left: 20px;
     margin-right: 20px;
+    padding-bottom: 30px;
 }
 
 .post-index-item {
     width: 80%;
-    background-color: rgb(255, 199, 199);
+    padding: 30px;
+    height: max-content;
+    box-sizing: border-box;
+    background-color: rgb(255, 218, 97);
     margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
+    position: relative;
 }
+
