--- a/frontend/src/assets/stylesheets/components/profile_pages.scss
+++ b/frontend/src/assets/stylesheets/components/profile_pages.scss
@@ -1,6 +1,6 @@
 .profile-page-container{
-    height: 100%;
-    position: absolute;
+    // height: 100%;
+    // position: absolute;
     width: 100%;
 }
 
