--- a/frontend/src/assets/stylesheets/components/feed.scss
+++ b/frontend/src/assets/stylesheets/components/feed.scss
@@ -19,10 +19,9 @@
 }
 
 .post-index {
-    width: 50%;
+    width: 40%;
     height: max-content;
     background-color: rgb(253, 255, 228);
-    margin-left: 20px;
     margin-right: 20px;
     padding-bottom: 30px;
     margin-bottom: 50px;
@@ -34,7 +33,7 @@
     padding: 30px;
     height: max-content;
     box-sizing: border-box;
-    background-color: rgb(255, 218, 97);
+    background-color: #cfffeb;
     margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
