--- a/frontend/src/assets/stylesheets/splash.scss
+++ b/frontend/src/assets/stylesheets/splash.scss
@@ -74,3 +74,46 @@ footer {
     background-color: rgb(253, 230, 127);
     width: 100%;
 }
+
+.footerIcons {    
+    display:flex;
+    justify-content: space-evenly;
+    padding-top: 20px;
+}
+
+.topFooterIcons {
+    display:flex;
+    justify-content: center;
+}
+
+.gitHub-Icon{
+    width: 50px;
+    height: 50px;
+}
+
+.gitHub-Icon a {
+    display: block;
+    background-image: url('../images/github-icon.svg');
+    width:50px;
+    height:50px
+}
+
+.linkedIn-Icon a {
+    display: block;
+    background-image: url('../images/linkedin-icon.svg');
+    width:50px;
+    height:50px
+}
+
+.angellist-Icon a {
+    display: block;
+    background-image: url('../images/angellist-icon.svg');
+    width:50px;
+    height:50px
+}
+
+.bio-name {
+    display:flex;
+    justify-content: center;
+    font-size: 20px;
+}
