--- a/frontend/src/assets/stylesheets/components/profile_pages.scss
+++ b/frontend/src/assets/stylesheets/components/profile_pages.scss
@@ -19,6 +19,8 @@
     background-color: rgb(255, 255, 255);
     border-radius: 4px;
     width: 30%;
+    height: max-content;
+    box-shadow: 1px 1px 3px 1px rgb(170, 170, 170);
     padding: 20px;
     box-sizing: border-box;
     text-align: center;
