--- a/frontend/src/assets/stylesheets/components/messenger.scss
+++ b/frontend/src/assets/stylesheets/components/messenger.scss
@@ -15,8 +15,8 @@
 .chatBoxBottom{
     margin-top: 5px;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
 }
 
 .chat-message-input{
@@ -26,12 +26,13 @@
 }
 
 .chatSubmitBtn{
-    width:70%;
+    width:84%;
     height: 40px;
     border: none;
     border-radius: 5px;
     background-color: teal;
     color: white;
+    margin-top: 5px;
 }
 
 .chatOnline{
@@ -74,3 +75,4 @@
     text-align: center;
     margin-top: 20px;
 }
+
