--- a/frontend/src/assets/stylesheets/components/profile_pages.scss
+++ b/frontend/src/assets/stylesheets/components/profile_pages.scss
@@ -72,13 +72,15 @@
  
   background-color:rgba(16, 196, 209, 0.904);
   color: white;
-  height: 40px;
+  height: 20px;
   font-size: 14px;
   margin-left: 10px;
   padding: 10px;
   border-radius: 4px;
   transition: all .3s;
   cursor: pointer;
+  text-align: center;
+  padding-top: 3%;
 }
 
 .not-own-friend:hover{
