--- a/frontend/src/assets/stylesheets/components/feed.scss
+++ b/frontend/src/assets/stylesheets/components/feed.scss
@@ -9,17 +9,17 @@
 }
 
 .aside-left {
-    width: 20%;
+    width: 50%;
     background-color: transparent;
 }
 
 .aside-right {
-    width: 20%;
-    background-color: white;
+    width: 40%;
+    background-color: transparent;
 }
 
 .post-index {
-    width: 40%;
+    width: 750px;
     height: max-content;
     background-color: rgb(253, 255, 228);
     margin-right: 20px;
@@ -40,3 +40,11 @@
     position: relative;
 }
 
+.pi-container {
+    width: 1000px;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 1px 1px 3px rgb(150, 150, 150);
+    background-color: rgb(253, 255, 228);
+    margin-bottom: 50px;
+}
