--- a/frontend/src/assets/stylesheets/components/post.scss
+++ b/frontend/src/assets/stylesheets/components/post.scss
@@ -146,8 +146,8 @@ textarea {
 .post-photo-3{
   width: 300px;
   height: 300px;
-  // background-image: url('.././images/seed1.png');
-  background-color: red;
+  background-image: url('../../images/corn.png');
+  // background-color: red;
   margin-bottom: 20px;
 }
 
