--- a/frontend/src/assets/stylesheets/components/feed.scss
+++ b/frontend/src/assets/stylesheets/components/feed.scss
@@ -19,7 +19,7 @@
 }
 
 .post-index {
-    width: 40%;
+    width: 800px;
     height: 100vh;
     overflow-y: scroll;
     background-color: rgb(253, 255, 228);
