--- a/frontend/src/assets/stylesheets/components/profile_pages.scss
+++ b/frontend/src/assets/stylesheets/components/profile_pages.scss
@@ -73,6 +73,7 @@
   background-color:rgba(16, 196, 209, 0.904);
   color: white;
   height: 40px;
+  line-height: 40px;
   font-size: 14px;
   margin-left: 10px;
   padding: 10px;
