Style profile and add fontawesome icons

--- a/frontend/src/assets/stylesheets/components/feed.scss
+++ b/frontend/src/assets/stylesheets/components/feed.scss
@@ -19,10 +19,10 @@
 }
 
 .post-index {
-    width: 50%;
+    width: 550px;
     background-color: rgb(253, 255, 228);
     padding-bottom: 30px;
-    margin-bottom: 50px;
+    margin: 0 30px 50px 30px;
     border-radius: 4px;
 
     ul{
