--- a/frontend/src/assets/stylesheets/components/profile_pages.scss
+++ b/frontend/src/assets/stylesheets/components/profile_pages.scss
@@ -5,11 +5,12 @@
 }
 
 .profile-info-container{
-    // width: 100%;
+    width: 1200px;
     height: 100%;
     padding-top: 50px;
+    margin: 0 auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     // border: 1px solid black;
 }
 
@@ -18,16 +19,18 @@
     flex-direction: column;
     background-color: rgb(255, 255, 255);
     border-radius: 4px;
-    width: 20%;
+    width: 250px;
     height: max-content;
     box-shadow: 1px 1px 3px 1px rgb(170, 170, 170);
     padding: 20px;
     box-sizing: border-box;
     text-align: center;
     align-items: center;
+    position: sticky;
+    top: 0;
 
     img {
-        width: 200px;
+        width: 100px;
     }
 }
 
