--- a/frontend/src/assets/stylesheets/components/navbar.scss
+++ b/frontend/src/assets/stylesheets/components/navbar.scss
@@ -321,11 +321,11 @@ a:visited{
 .other-btn {
   margin-left: 20px;
   padding: 10px;
-  border-radius: 50%;
+  border-radius: 3px;
   font-family: $main-font;
   color: white;
   height: inherit;
-  font-size: 20px;
+  font-size: 18px;
   // background: rgb(13, 177, 109);
   background: rgb(252, 101, 81);
   
