--- a/frontend/src/assets/stylesheets/components/post.scss
+++ b/frontend/src/assets/stylesheets/components/post.scss
@@ -41,7 +41,7 @@ position: absolute;
 
 .delete-post {
   border: none;
-  background-color:transparent;
+  background-color: transparent;
   color: rgba(16, 196, 209, 0.904);
   height: 40px;
   font-size: 14px;
@@ -65,6 +65,7 @@ position: absolute;
 }
 
 a.delete-post{
+  color: rgba(16, 196, 209, 0.904);
   display: block;
   line-height: 20px;
   height: 20px;
@@ -124,26 +125,3 @@ textarea {
   color: rgb(243, 45, 45);
   position: absolute;
 }
-
-// .post-photo-1{
-//   width: 300px;
-//   height: 300px;
-//   background-image: url('../../images/mala.png');
-//   // background-color: red;
-//   margin-bottom: 20px;
-// }
-
-// .post-photo-2{
-//   width: 300px;
-//   height: 266px;
-//   background-image: url('../../images/ayada.png');
-//   // background-color: red;
-//   margin-bottom: 20px;
-// }
-
-// .post-photo-3{
-//   width: 300px;
-//   height: 300px;
-//   background-image: url('../../images/corn.png');
-//   margin-bottom: 20px;
-// }
