Upload img post works

--- a/frontend/src/assets/stylesheets/components/post.scss
+++ b/frontend/src/assets/stylesheets/components/post.scss
@@ -22,6 +22,13 @@ position: absolute;
   border-radius: 4px;
 }
 
+.post-index-item{
+  img{
+    width: 400px;
+    height: 400px;
+  }
+}
+
 .rest-name{
   font-size: 20px;
   font-weight: 700;
