Add upload to AWS function

--- a/frontend/src/assets/stylesheets/components/feed.scss
+++ b/frontend/src/assets/stylesheets/components/feed.scss
@@ -35,8 +35,7 @@
     padding: 30px;
     height: max-content;
     box-sizing: border-box;
-    background-color: #cfffeb;
-    margin-top: 30px;
+    border-bottom: 10px solid #cfffeb;
     margin-left: auto;
     margin-right: auto;
     position: relative;
