--- a/frontend/src/assets/stylesheets/components/profile_pages.scss
+++ b/frontend/src/assets/stylesheets/components/profile_pages.scss
@@ -89,3 +89,11 @@
   background-color: rgb(255, 255, 209);
   color: $red;
 }
+
+.profilebackground {
+    position: fixed,
+}
+
+.avatarIcon {
+    background-color: pink;
+}
