--- a/frontend/src/assets/stylesheets/index.scss
+++ b/frontend/src/assets/stylesheets/index.scss
@@ -8,4 +8,5 @@
 @import './components/message.scss';
 @import './components/feed.scss';
 @import './components/post.scss';
-@import './components/friend.scss'
+@import './components/friend.scss';
+@import './components/live_chat_friend_bar.scss';
