Styling edit post form and feed

--- a/frontend/src/assets/stylesheets/components/feed.scss
+++ b/frontend/src/assets/stylesheets/components/feed.scss
@@ -48,5 +48,5 @@
     border-radius: 5px;
     box-shadow: 1px 1px 3px rgb(150, 150, 150);
     background-color: rgb(253, 255, 228);
-    margin-bottom: 50px;
+    margin: 0 auto 50px auto;
 }
