Style form errors

--- a/frontend/src/assets/stylesheets/components/post.scss
+++ b/frontend/src/assets/stylesheets/components/post.scss
@@ -169,3 +169,11 @@ textarea {
   font-size: 15px;
   margin-bottom: 5px;
 }
+
+.file-errors {
+  color: rgb(175, 0, 0);
+  position: absolute;
+  bottom: 90px;
+  left: 20px;
+  font-size: 13px;
+}
