--- a/frontend/src/assets/stylesheets/components/messenger.scss
+++ b/frontend/src/assets/stylesheets/components/messenger.scss
@@ -1,5 +1,5 @@
 .messenger{
-    height: calc(100vh - 60px);
+    height: calc(100vh - 20px);
     display: flex;
 }
 
@@ -80,3 +80,16 @@
 }
 
 
+.friendHandle{
+    text-align: center;
+    height:auto;
+    padding:20px;
+    border-bottom: 1px solid rgb(230, 228, 228);
+
+}
+
+.friendHandleh1{
+    font-size: 30px;
+    font-weight: bold;
+    color:#fc6551;
+}
