--- a/frontend/src/assets/stylesheets/components/feed.scss
+++ b/frontend/src/assets/stylesheets/components/feed.scss
@@ -33,7 +33,7 @@
 
 .post-index-item {
     width: 500px;
-    padding: 30px;
+    padding: 30px 30px 10px 30px;
     height: max-content;
     box-sizing: border-box;
     border-bottom: 10px solid #cfffeb;
