--- a/frontend/src/assets/stylesheets/components/messenger.scss
+++ b/frontend/src/assets/stylesheets/components/messenger.scss
@@ -93,3 +93,16 @@
     font-weight: bold;
     color:#fc6551;
 }
+
+.spinner{
+    position: absolute;
+    top:50%;
+    left: 49%;
+}
+
+.spinner-new-msg{
+    position: absolute;
+    top:50%;
+    left: 45%;
+    text-align: center;
+}
