--- a/frontend/src/assets/stylesheets/components/search_result.scss
+++ b/frontend/src/assets/stylesheets/components/search_result.scss
@@ -21,11 +21,14 @@
     position: absolute;
     left: 0;
 }
+.user-avatar{
+    width: 150px;
+}
 
 .user-page-link{
     > a{
         color: black;
-        font-size: 20px;
+        font-size: 40px;
     }
 }
 
