--- a/frontend/src/assets/stylesheets/components/search_bar.scss
+++ b/frontend/src/assets/stylesheets/components/search_bar.scss
@@ -14,14 +14,21 @@
     border-radius: 10px;
     border: none;
     outline: none;
-     margin-right: 5px;
+    margin-right: 5px;
+    height: 20px;
+    padding-left: 10px;
 }
 
 .search-bar-submit{
-    border-radius: 10px;
+    border-radius: 50%;
+    background-color: transparent;
+    color: white;
+    text-align: center;   
     border: none;
+    transition: all .3s;
+    cursor: pointer;
    
 }
   .search-bar-submit:hover{
-        cursor: pointer;
+        color: rgb(91, 213, 218);
     }
