--- a/frontend/src/assets/stylesheets/components/search_result.scss
+++ b/frontend/src/assets/stylesheets/components/search_result.scss
@@ -1,30 +1,44 @@
 .search-result-container{
-    display: flex;
-    justify-content: center;
+    // display: flex;
+    // justify-content: center;
     // border: 1px solid white;
-    width: 25%;
-    height: 200px;
+    padding: 20px 0 0 50px;
+    width: 800px;
+    min-height: 700px;
     position: relative;
-    left: 40%;
+    margin: 0 auto;
     background-color: white;
-  
+    box-sizing: border-box;
 }
 
 .search-result-info{
-    margin-top: 25%;
+    margin-top: 30px;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    // justify-content: center;
+    align-items: center;
+    width: 600px;
+    padding-left: 20px;
+    margin-bottom: 100px;
 }
 
 .user-profile-picture{
-    position: absolute;
-    left: 0;
+    // position: absolute;
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    background-color: gray;
+    margin-right: 100px;
 }
 
 .user-page-link{
     > a{
         color: black;
+        font-size: 20px;
+        transition: all .3s;
+    }
+
+    > a:hover{
+        color: $red;
         font-size: 20px;
     }
 }
