--- a/frontend/src/assets/stylesheets/splash.scss
+++ b/frontend/src/assets/stylesheets/splash.scss
@@ -1,4 +1,5 @@
 $main-font: 'Ubuntu', sans-serif;
+$second-font: 'Raleway', sans-serif;
 $red: rgb(252, 101, 81);
 
 
@@ -141,6 +142,7 @@ footer {
     display:flex;
     justify-content: center;
     font-size: 20px;
+    font-family: 'Raleway', sans-serif;
 }
 
 .bios {
