fixed signup avatar default photo

--- a/frontend/src/assets/stylesheets/components/profile_pages.scss
+++ b/frontend/src/assets/stylesheets/components/profile_pages.scss
@@ -98,6 +98,10 @@
     padding-top: 50px;
 }
 
-.avatarBank {
-    background-color: black;
+.avatarBankButtons {
+    display: flex;
+}
+
+.avatarBankBox {
+    position: absolute;
 }
