avatarbuttons everywhere forreal

--- a/frontend/src/assets/stylesheets/components/post.scss
+++ b/frontend/src/assets/stylesheets/components/post.scss
@@ -22,11 +22,14 @@ position: absolute;
   border-radius: 4px;
 }
 
-.post-index-item{
-  img{
+// .postAvatarImg {
+//   width: 25px;
+//   height: 25px;
+// }
+
+.post-image{
     max-width: 100%;
     min-width: 100%;
-  }
 }
 
 .rest-name{
