--- a/frontend/src/assets/stylesheets/components/post.scss
+++ b/frontend/src/assets/stylesheets/components/post.scss
@@ -22,10 +22,14 @@ position: absolute;
   border-radius: 4px;
 }
 
-// .postAvatarImg {
-//   width: 25px;
-//   height: 25px;
-// }
+.post-heading {
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+}
+.postAvatarImg {
+  margin-left: 5px;
+}
 
 .post-image{
     max-width: 100%;
